--- a/app/pom.xml
+++ b/app/pom.xml
@@ -82,8 +82,14 @@
 			pom) -->
 			<plugins>
 				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>3.10-SNAPSHOT</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.2</version>
+					<version>3.0.0-M6</version>
 				</plugin>
 				<plugin>
 					<groupId>org.jacoco</groupId>
