--- a/app/pom.xml
+++ b/app/pom.xml
@@ -81,7 +81,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
-					<version>3.10-SNAPSHOT</version>
+					<version>3.9.1.2184</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
