--- a/app/sonar-project.properties
+++ b/app/sonar-project.properties
@@ -1,2 +1,13 @@
-sonar.projectKey=br.com.kumabe:dependency-java-github-repository-core
-sonar.sources=.
+sonar.sourceEncoding=UTF-8
+sonar.language=java
+sonar.java.source=11
+sonar.java.binaries=target/classes
+sonar.sources=src/main/java
+sonar.exclusions=**/configs/*, **/converters/*, **/dtos/*, **/enums/*,**/exceptions/*,**/models/*,**/repositories/*,**/utils/*,**/SpringApp.java
+sonar.tests=src/test/java
+sonar.java.coveragePlugin=jacoco
+sonar.dynamicAnalysis=reuseReports
+sonar.jacoco.reportPaths=target/jacoco.exec
+jacoco.datafile=target/jacoco.exec
+jacoco.reporting.outputDirectory=target/reports/jacoco
+jacoco.inclNoLocationClasses=true
